; ModuleID = '/home/carl/AnghaBench/redis/src/extr_geohash.c_geohashEncodeType.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_geohash.c_geohashEncodeType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @geohashEncodeType(double %0, double %1, i32 %2, i32* %3) #0 {
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca [2 x %struct.TYPE_6__], align 4
  store double %0, double* %5, align 8
  store double %1, double* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = bitcast [2 x %struct.TYPE_6__]* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %10, i8 0, i64 8, i1 false)
  %11 = getelementptr inbounds [2 x %struct.TYPE_6__], [2 x %struct.TYPE_6__]* %9, i64 0, i64 0
  %12 = getelementptr inbounds [2 x %struct.TYPE_6__], [2 x %struct.TYPE_6__]* %9, i64 0, i64 1
  %13 = call i32 @geohashGetCoordRange(%struct.TYPE_6__* %11, %struct.TYPE_6__* %12)
  %14 = getelementptr inbounds [2 x %struct.TYPE_6__], [2 x %struct.TYPE_6__]* %9, i64 0, i64 0
  %15 = getelementptr inbounds [2 x %struct.TYPE_6__], [2 x %struct.TYPE_6__]* %9, i64 0, i64 1
  %16 = load double, double* %5, align 8
  %17 = load double, double* %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @geohashEncode(%struct.TYPE_6__* %14, %struct.TYPE_6__* %15, double %16, double %17, i32 %18, i32* %19)
  ret i32 %20
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @geohashGetCoordRange(%struct.TYPE_6__*, %struct.TYPE_6__*) #2

declare dso_local i32 @geohashEncode(%struct.TYPE_6__*, %struct.TYPE_6__*, double, double, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
